clang/test/BSC/Negative/Ownership/RuleCheck/for-while/for-while.cbs
// RUN: %clang_cc1 -verify %s

void func1() {
	int * _Owned a;
	for (int i = 0; i < 10; i++) {
		a = __take_from_raw(&i); // expected-error {{assign to _Owned value: `a`}}
	}
} // expected-error {{memory leak of value: `a`}}

int * _Owned IntPtrOwned(int * _Owned a);

void func2() {
	int * _Owned a;
	int * _Owned b;
	int num = 5;
	for (int i = 0; i < 10; i++) {
		b = __take_from_raw(&num);
		a = IntPtrOwned(b); // expected-error {{assign to _Owned value: `a`}}
	}
} // expected-error {{memory leak of value: `a`}}

void func3(int num) {
	int * _Owned b;
	int * _Owned c;
	for (int i = 0; i < 10; i++) {
		if (i == 5) {
			continue;
		}
		if (i > 5) {
			b = __take_from_raw(&num);
			int * _Owned a;
			if (i < 10) {
				a = b;
				b = __take_from_raw(&i);
			} else if (i < 20) {
				if (i > 12) {
					a = __take_from_raw(&i);
				} else if (i < 16) {
					a = b;
				} else {
					a = __take_from_raw(&num);
				}
			}
		} // expected-error {{memory leak of value: `a`}}
		c = b; // expected-error {{assign to _Owned value: `c`}} expected-error {{use of moved value: `b`}}
	}
} // expected-error {{memory leak of value: `c`}}

void func4(int num) {
	int * _Owned b;
	int * _Owned c;
	int i = 0;
	while (i < 10) {
		if (i == 5) {
			continue;
		}
		if (i > 5) {
			b = __take_from_raw(&num);
			int * _Owned a;
			if (i < 10) {
				a = b;
				b = __take_from_raw(&i);
			} else if (i < 20) {
				if (i > 12) {
					a = __take_from_raw(&i);
				} else if (i < 16) {
					a = b;
				} else {
					a = __take_from_raw(&num);
				}
			}
		} // expected-error {{memory leak of value: `a`}}
		c = b; // expected-error {{assign to _Owned value: `c`}} expected-error {{use of moved value: `b`}}
		i++;
	}
} // expected-error {{memory leak of value: `c`}}

void func5(int num) {
	int * _Owned b;
	int * _Owned c;
	int i = 0;
	do {
		if (i == 5) {
			continue;
		}
		if (i > 5) {
			b = __take_from_raw(&num);
			int * _Owned a;
			if (i < 10) {
				a = b;
				b = __take_from_raw(&i);
			} else if (i < 20) {
				if (i > 12) {
					a = __take_from_raw(&i);
				} else if (i < 16) {
					a = b;
				} else {
					a = __take_from_raw(&num);
				}
			}
		} // expected-error {{memory leak of value: `a`}}
		c = b; // expected-error {{assign to _Owned value: `c`}} expected-error {{use of moved value: `b`}}
		i++;
	} while (i < 10);
} // expected-error {{memory leak of value: `c`}}
